changes in verscel.json

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,6 @@
         "dest": "/index.html"
       }
     ],
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "build": "tsc -b && vite build"
   }
